fix: add css back in to fix uneven columns in calendar

--- a/apps/web/src/app/sass/style.scss
+++ b/apps/web/src/app/sass/style.scss
@@ -189,6 +189,11 @@ $font-family: arial, helvetica, sans-serif;
 	width: 2%;
 }
 
+.calendar-table th:not(.time-column),
+.calendar-table td:not(.time-column) {
+	width: 14%;
+}
+
 .calendar-table td.event {
 	background-color: lightblue;
 	border-left-style: none;
